[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ConfigFramework"
dynamic = ["version", "readme"]
authors = [
    {name = "Rud356", email = "rud356github@gmail.com"},
]
description = "A small framework to build your flexible project configurations"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]
dependencies = [
    "pyyaml>=6.0.0",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["config_framework"]
exclude = ["tests", "examples"]

[project.optional-dependencies]
mypy = ["mypy", "types-PyYAML"]
dev = ["sphinx~=5.0.2", "sphinx-rtd-theme~=1.0.0", "Pygments~=2.12.0"]
